--- a/package.json
+++ b/package.json
@@ -1,10 +1,17 @@
 {
-  "name": "http-nodejs",
+  "name": "server",
   "version": "1.0.0",
+  "description": "",
   "main": "index.js",
-  "author": "Aiden Bai",
-  "license": "MIT",
   "scripts": {
-    "start": "node server.mjs"
+    "start": "node server.mjs",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "devDependencies": {
+    "json-server": "^0.17.3",
+    "json-server-auth": "^2.1.0"
   }
 }
